--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: your awesome title
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+title: 阳光洒满旅途
+page-title: 阳光洒满旅途的博客.
+home-title: 做一个团宠小可爱~
+description: 越努力，越幸运~
 ---
 
 {% include header.html %}
