--- a/tags.html
+++ b/tags.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: 标签
-page-title: up
-home-title: pick me.
-description:believe
+page-title: tags
+home-title: Let's pick something.
+description:
 ---
 
 {% include header.html %}
